<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4CDC5"
    tools:context=".ui.info.InfoActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ripple"
        android:padding="20dp"
        android:src="@drawable/back"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/ic_back">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_info"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/one"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/two"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/three"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textColor="@color/white"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>