<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item_0"
    android:padding="10dp"
    android:layout_margin="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:id="@+id/ll_qq"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:background="?android:selectableItemBackground"
        android:layout_height="52dp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qaraqalpaq"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/qq_bayraq"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:src="@drawable/qq" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_below="@id/ll_qq"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:background="?android:selectableItemBackground"
        android:id="@+id/ll_rus"
        android:gravity="center"
        android:layout_height="52dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rus"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rus_bayraq"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:src="@drawable/rus" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_below="@id/ll_rus"
        android:layout_marginTop="20dp"
        android:id="@+id/ll_english"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20dp"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:layout_height="52dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/englis_bayraq"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:src="@drawable/uk" />
    </androidx.appcompat.widget.LinearLayoutCompat>



</RelativeLayout>